Added structure to chinese generator
(cherry picked from commit 0b2354a3066e86b1c0b701ae2c966aaa5aaa0ffd)

--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -26,3 +26,12 @@ $japanese-color-scorpion: #605D60;
 $japanese-color-scorpion-transparency: rgb(96, 92, 96, 0.6);
 $japanese-color-button: linear-gradient(0deg, rgba(117,128,67,1) 0%, rgba(204,184,169,1) 100%);
 $japanese-color-button-hover: linear-gradient(0deg, rgba(117,128,67,1) 0%,rgb(216, 200, 188) 100%);
+
+$chinese-color-zorba: #9D9788;
+$chinese-color-zorba-transparency: rgb(157, 151, 136, 0.6);
+$chinese-color-rhino: #2F385A;
+$chinese-color-voodoo: #513D58;
+$chinese-color-fawn: #6E5237;
+$chinese-color-fawn-transparency: rgb(110, 82, 55, 0.6);
+$chinese-color-button: linear-gradient(14deg, rgba(81,61,88,1) 0%, rgba(109,84,117,1) 100%);;
+$chinese-color-button-hover: linear-gradient(14deg, rgba(81,61,88,1) 0%, rgb(127, 100, 136) 100%);
