Chinese hanzi added, new font for hanzi, generator rewritten

--- a/src/Styles/Chinese.scss
+++ b/src/Styles/Chinese.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 @import "./mixins";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@600&family=Parisienne&family=Raleway&display=swap');
 
 .Chinese {
     @include background;
@@ -12,6 +13,8 @@
             @include container-names;
             div {
                 @include names;
+                font-weight: 600;
+                font-family: 'Noto Serif SC', serif;
                 background-color: $chinese-color-fawn-transparency;
             }
         }
