--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -33,5 +33,5 @@ $chinese-color-rhino: #2F385A;
 $chinese-color-voodoo: #513D58;
 $chinese-color-fawn: #6E5237;
 $chinese-color-fawn-transparency: rgb(110, 82, 55, 0.6);
-$chinese-color-button: linear-gradient(14deg, rgba(81,61,88,1) 0%, rgba(109,84,117,1) 100%);;
-$chinese-color-button-hover: linear-gradient(14deg, rgba(81,61,88,1) 0%, rgb(127, 100, 136) 100%);
+$chinese-color-button: linear-gradient(0deg, rgba(81,61,88,1) 0%, rgb(123, 96, 133) 100%);
+$chinese-color-button-hover: linear-gradient(0deg, rgba(81,61,88,1) 0%, rgb(143, 113, 153) 100%);
