Menu component, styles for buttons
(cherry picked from commit f3d8e3bf5b61ad764450a1c92c210726d52cd11e)

--- a/src/Styles/Chinese.scss
+++ b/src/Styles/Chinese.scss
@@ -18,15 +18,26 @@
                 background-color: $chinese-color-fawn-transparency;
             }
         }
-        button {
-            @include button;
-            background-image: $chinese-color-button;
-            &:hover {
-                background-image: $chinese-color-button-hover;
-            }
+    }
+    button {
+        @include button;
+        background-image: $chinese-color-button;
+        &:hover {
+            background-image: $chinese-color-button-hover;
         }
     }
     footer {
         color: $chinese-color-rhino;
+    }
+    .Menu {
+        background-color: $chinese-color-zorba-transparency;
+        button {
+            @include button-menu;
+        }
+        a.active {
+            button {
+                background-image: $chinese-color-button-hover;
+            }
+        }
     }
 }
