--- a/src/Styles/Fantasy.scss
+++ b/src/Styles/Fantasy.scss
@@ -8,6 +8,9 @@
     main {
         @include window;
         background-color: $fantasy-color-deluge-transparency;
+        h1 {
+            color: $fantasy-color-glacier;
+        }
         div {
             @include container-names;
             div {
@@ -15,15 +18,26 @@
                 background-color: $fantasy-color-glacier-transparency;
             }
         }
-        button {
-            @include button;
-            background-image: $fantasy-color-button;
-            &:hover {
-                background-image: $fantasy-color-button-hover;
-            }
+    }
+    button {
+        @include button;
+        background-image: $fantasy-color-button;
+        &:hover {
+            background-image: $fantasy-color-button-hover;
         }
     }
     footer {
         color: $fantasy-color-old-rose;
+    }
+    .Menu {
+        background-color: $fantasy-color-deluge-transparency;
+        button {
+            @include button-menu;
+        }
+        a.active {
+            button {
+                background-image: $fantasy-color-button-hover;
+            }
+        }
     }
 }
