Hanzi class with font, names additional styles
(cherry picked from commit c8f549d1d950450d610a710c116a239f05ffc347)

--- a/src/Styles/_mixins.scss
+++ b/src/Styles/_mixins.scss
@@ -56,7 +56,8 @@
     font-size: $font-size-large;
     line-height: 1;
     border-radius: 10px;
-    span {
+    gap: 0px;
+    span.heart-icon {
         position: absolute;
         right: 10px;
         &:hover {
