--- a/src/Styles/Main.scss
+++ b/src/Styles/Main.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@600&family=Parisienne&family=Raleway&display=swap');
 @import "./variables";
 
 .Main {
@@ -27,5 +28,9 @@
         display: grid;
         margin: 0px 20px;
     }
+  }
+  .hanzi {
+    font-weight: 600;
+    font-family: 'Noto Serif SC', serif;
   }
 }
