Favourite page, span changed to button
(cherry picked from commit aac5cc9564ad679e6218942b2fa56a354b5ab7ae)

--- a/src/Styles/Fantasy.scss
+++ b/src/Styles/Fantasy.scss
@@ -19,7 +19,7 @@
             div {
                 @include names;
                 background-color: $fantasy-color-glacier-transparency;
-                span {
+                button.heart-icon {
                     &:hover svg {
                         color: $fantasy-color-tuna-transparency;
                     }
