--- a/src/Styles/Chinese.scss
+++ b/src/Styles/Chinese.scss
@@ -17,7 +17,8 @@
                     font-size: $font-size-medium;
                     font-weight: bold;
                 }
-                span {
+                button.heart-icon {
+                    color: $chinese-color-rhino;
                     &:hover svg {
                         color: $chinese-color-rhino-transparency;
                     }
