Favourite page: styling names
(cherry picked from commit 8ad5b7c528b03fa88e0eae5fcbb1e823a88ed917)

--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -11,6 +11,10 @@ $main-page-button-bg: linear-gradient(0deg, rgba(0,116,96,1) 0%, rgb(60, 136, 12
 $main-page-button-hover: linear-gradient(0deg, rgba(0,116,96,1) 0%, rgb(91, 168, 157) 100%);
 $main-page-button-text: #B2CCC7;
 
+$favourite-name-bg: #364954;
+$favourite-text: #E6F4F1;
+$favourite-text-hover: rgb(230, 244, 241, 0.7);
+
 $fantasy-color-tuna: #313247;
 $fantasy-color-tuna-transparency: rgb(50, 51, 72, 0.7);
 $fantasy-color-old-rose: #BF818F;
