Remove from favourite - new function added

--- a/src/Styles/Favourite.scss
+++ b/src/Styles/Favourite.scss
@@ -10,6 +10,12 @@
                 @include names;
                 background-color: $favourite-name-bg;
                 color: $favourite-text;
+                button.icon {                  
+                    &:before {
+                        content: "Remove from favourite";
+                        background-color: $favourite-name-bg;
+                    }
+                }
             }
         }
     }
