--- a/src/Styles/_mixins.scss
+++ b/src/Styles/_mixins.scss
@@ -57,7 +57,7 @@
     line-height: 1;
     border-radius: 10px;
     gap: 0px;
-    button.heart-icon {
+    button.icon {
         position: absolute;
         right: 10px;
         background: transparent;
