--- a/src/Styles/Chinese.scss
+++ b/src/Styles/Chinese.scss
@@ -17,7 +17,7 @@
                     font-size: $font-size-medium;
                     font-weight: bold;
                 }
-                button.heart-icon {
+                button.icon {
                     color: $chinese-color-rhino;
                     &:hover svg {
                         color: $chinese-color-rhino-transparency;
