--- a/src/Styles/Fantasy.scss
+++ b/src/Styles/Fantasy.scss
@@ -19,7 +19,7 @@
             div {
                 @include names;
                 background-color: $fantasy-color-glacier-transparency;
-                button.heart-icon {
+                button.icon {
                     &:hover svg {
                         color: $fantasy-color-tuna-transparency;
                     }
